# kokua

./: Cargo.toml  README.md  search_index.en.js
.github/workflows/: build_page.yaml
some-article/: index.html
some-other-article/: index.html
src/: help.rs  main.rs
src/kokua-api/: Cargo.toml
src/kokua-commands/: Cargo.toml
src/kokua-commands/src/: lib.rs
src/kokua-core/: Cargo.toml
src/kokua-utils/: Cargo.toml
src/kokua-utils/src/: lib.rs
tags/: index.html
tags/javascript/: index.html
tags/ocaml/: index.html
tags/other/: index.html
tags/rust/: index.html
website/content/: _index.md
website/public/: index.html  robots.txt
website/public/article-3/: index.html
website/public/article-4/: index.html
website/public/article-5/: index.html
website/public/page/2/: index.html
website/public/tags/closure/: index.html
website/public/tags/go/: index.html
website/public/tags/haskell/: index.html
website/public/tags/java/: index.html
website/public/tags/ssg/: index.html
