[package]
name = "kokua"
version = "0.1.0"
authors = ["komi1230 <yukke.konan@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://komi1230.github.io/launcher"
repository = "https://github.com/komi1230/kokua"
readme = "README.md"
description = "Yet Another Embulk written in Rust"

[dependencies]
clap = "2.33.3"
kokua-commands = { path = "src/kokua-commands", version = "0.1.0"}

[workspace]
members = [
    "src/kokua-api",
    "src/kokua-core",
    "src/kokua-commands",
]

[[bin]]
name = "kokua"
