[package]
name = "kokua"
version = "0.1.0"
authors = ["komi1230 <yukke.konan@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://komi1230.github.io/kokua"
repository = "https://github.com/komi1230/kokua"
readme = "README.md"
description = "Yet Another Embulk written in Rust"

[dependencies]
clap = "3.0.0-beta.2"
kokua-commands = { path = "src/kokua-commands", version = "0.1.0"}

[workspace]
members = [
    "src/kokua-api",
    "src/kokua-commands",
]

[[bin]]
name = "kokua"
