[package]
name = "kokua-core"
version = "0.1.0"
authors = ["komi1230 <yukke.konan@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://komi1230.github.io/launcher"
repository = "https://github.com/komi1230/kokua"
readme = "../../README.md"
description = "Yet Another Embulk written in Rust"

[dependencies]
